# sparkle_interactions

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: extract.rs  handle.rs  lib.rs
src/builder/: component.rs  interaction_response.rs
src/extract/: interaction_data.rs  modal_component.rs  option.rs
src/extract/modal_component/: tests.rs
src/extract/option/: tests.rs
src/handle/: tests.rs
tests/: followup.rs  response.rs  update_last.rs
tests/common/: mod.rs
tests/interaction_handle/: followup.rs  mod.rs  response.rs  update_last.rs
