[package]
name = "sparkle_interactions"
version = "0.15.3"
edition = "2021"
authors = ["Lara Kayaalp <me@lara.lv>"]
description = "Safe, concise Discord interaction handling for Twilight"
documentation = "https://docs.rs/sparkle_interactions"
repository = "https://github.com/laralove143/sparkle_interactions"
license = "MIT"
keywords = ["discord", "discord-api", "twilight"]
categories = ["parsing"]

[lints.rust]
absolute-paths-not-starting-with-crate = "warn"
elided-lifetimes-in-paths = "warn"
explicit-outlives-requirements = "warn"
ffi-unwind-calls = "warn"
keyword-idents = "warn"
let-underscore-drop = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
non-ascii-idents = "warn"
rust-2021-incompatible-or-patterns = "warn"
rust-2021-prefixes-incompatible-syntax = "warn"
rust-2021-prelude-collisions = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"
unsafe-code = "warn"
unsafe-op-in-unsafe-fn = "warn"
unstable-features = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
absolute-paths = "allow"
blanket-clippy-restriction-lints = "allow"
error-impl-error = "allow"
exhaustive-enums = "allow"
exhaustive-structs = "allow"
implicit-return = "allow"
missing-docs-in-private-items = "allow"
missing-inline-in-public-items = "allow"
missing-trait-methods = "allow"
module-name-repetitions = "allow"
multiple-crate-versions = "allow"
multiple-inherent-impl = "allow"
non-ascii-literal = "allow"
partial-pub-fields = "allow"
pattern-type-mismatch = "allow"
print-stderr = "allow"
print-stdout = "allow"
pub-use = "allow"
question-mark-used = "allow"
self-named-module-files = "allow"
single-call-fn = "allow"
single-char-lifetime-names = "allow"
std-instead-of-alloc = "allow"
std-instead-of-core = "allow"
wildcard-enum-match-arm = "allow"

[dependencies]
twilight-http = { version = "0.15", default-features = false }
twilight-model = "0.15"
twilight-validate = "0.15"
tokio = { version = "1.37", features = ["time"], default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
dotenvy = { version = "0.15" }
twilight-gateway = "0.15"
twilight-util = { version = "0.15.4", features = ["builder"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

[features]
respond_on_delay = ["dep:tokio"]
